Developed map edition window. Some bug fixes. The project is now in beta phase.